Fix collapsed animation and update message in Product page

--- a/src/styles/namespaces/Product/Content.scss
+++ b/src/styles/namespaces/Product/Content.scss
@@ -46,45 +46,13 @@
         display: block
       }
 
-      &-image {
-        margin: auto;
-        margin-right: 120px;
-
-        img {
-          width: 318px;
-          height: 240px;
-          border: solid;
-          border-color: #888;
-          border-width: 1px;
-        }
-
-
-        @include viewport-s {
-          img {
-            display: block;
-            margin: auto;
-          }
-        }
-
-        @include keyframes(pd-Content_description-image) {
-          from {
-            opacity: 0;
-          }
-          to {
-            opacity: 1;
-          }
-        }
-
-        @include animation(pd-Content_description-image 1s ease 1s);
-      }
-
       &-text {
         font-size: 1.0rem;
         color: #000;
         line-height : 1.5;
         letter-spacing : 0.1em;
-        width: 320px;
-        margin: 0 auto;
+        width: 400px;
+        margin-right: 40px;
 
         @include viewport-s {
           h2 {
@@ -107,6 +75,35 @@
         }
 
         @include animation(pd-Content_description-text 1s ease 1s);
+      }
+
+      &-image {
+        margin-top: 16px;
+        img {
+          width: 318px;
+          height: 240px;
+          border: solid;
+          border-color: #888;
+          border-width: 1px;
+          @include animation(pd-Content_description-image 1s ease 1s);
+        }
+
+        @include viewport-s {
+          img {
+            display: block;
+            margin: auto;
+            @include animation(pd-Content_description-image 1s ease 1s);
+          }
+        }
+
+        @include keyframes(pd-Content_description-image) {
+          from {
+            opacity: 0;
+          }
+          to {
+            opacity: 1;
+          }
+        }
       }
 
       &-other {
